class/DefiningFiles/02-podError.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
spec:
  containers:
    - name: nginx
      # here is the error; no image named 'nginxColton' exists
      image: nginxColton
      ports:
        - containerPort: 80
