class/DefiningFiles/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy # nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
