class/DefiningFiles/06-podns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: production
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
