class/DefiningFiles/07-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: fancyname1
  name: fancyname1
  namespace: production
spec:
  containers:
    - image: nginx:latest
      name: fancyname1
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
