class/DefiningFiles/13-pod-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: servide-demo # user defined
spec:
  containers:
    - name: nginx
      image: nginx1.14.2
      ports:
        - containerPort: 80
          name: http-web-svc
