class/DefiningFiles/17-containerResources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
    - name: app
      image: images.my-company.example/app:v4
      resources:
        requests: # minimum requests by container
          memory: "64Mi"
          cpu: "250m"
        limits: # hard stop
          memory: "128Mi"
          cpu: "500m"
    - name: log-aggregator
      image: images.my-comapny.example/log-aggregator:v6
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
