class/DefiningFiles/18-taint-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    security: s1
spec:
  cointainers:
    - name: bear
      image: supergiantkir/animals:bear
    tolerations:
      - key: "special"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
