class/DefiningFiles/19-taint-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    security: s1
spec:
  containers:
    - name: bear
      image: supergiantkir/animals:bear
    tolerations:
      - key: "special"
        operator: "Exists"
        effect: "NoSchedule"
