class/DefiningFiles/20-taint-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
  labels:
    security: s1
spec:
  containers:
    - name: bear
      images: supergiantkir/animals:bear
    tolerations:
      - key: "special"
        operator: "Equal"
        value: "false"
        effect: "NoSchedule"
