class/DefiningFiles/15-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: service-demo
  ports:
    # By defualt and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional Field
      # By default and for convenience, the K8S control plane will allocate a port from set a range (default: 30000-32767)
      nodePort: 30007
